frontend/src/styles/PriceList/PriceListTable.module.css
.body {
    flex: 1;
    overflow-y: auto;
    padding-top: 1rem;
    padding-left: 5rem;
    padding-right: 5rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    color: black
}

.toolbar {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 2rem;
}

.search-group {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.search-bar {
  display: flex;
  align-items: center;
  gap: 0.5;
  background: #ffffff;
  border: 1.5px solid #e2e6ef;
  border-radius: 10px;
  padding: 0.5rem 1rem;
  transition: border-color 0.2s;
}

.search-bar:focus-within {
  border-color: #0f7ee9;
}

.search-bar input {
  border: none;
  outline: none;
  font-size: 1rem;
  color: #1a1d2e;
  background: none;
  width: 400px;
}

.search-bar input::placeholder {
  color: #b0b5cc;
}

.button-group {
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

.button {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem 0.5rem;
  border-radius: 10px;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  cursor: pointer;
  transition: all 0.15s;
  white-space: nowrap;
  box-shadow: 0 0 3px;
  background: white;
  color: #aaaaaa;
}

.button:hover {
  background: #0f7ee9;
  color: white;
}

.button-ghost {
  background: #ffffff;
  border: 1.5px solid #e2e6ef;
  color: #4a4f6a;
}

.button-ghost:hover {
  border-color: #0f7ee9;
  color: #0f7ee9;
}

.button-search {
    cursor: pointer;
    background: transparent;
    border: none;
}

.table-wrapper {
  background: #ffffff;
  border-radius: 14px;
  overflow: auto;
}

.table {
  width: 100%;
  border-spacing: 10px 10px;
}

.table-header {
  padding-top: 1rem;
  padding-left: 0rem;
  padding-right: 0rem;
  text-align: left;
  font-size: 1rem;
  font-weight: 500;
  border: none;
  background: none;
  cursor: pointer;
}

.table-header-inner {
  display: inline-flex;
  align-items: center;
  gap: 5px;
}

.row {
  cursor: pointer;
}

.table-data {
  padding: 0.2rem 0.5rem;
  font-size: 13.5px;
  background: white;
  border: 1px solid #77d2d2;
  border-radius: 10px;
  transition: background 0.15s;
  white-space: nowrap;
  margin-right: 1rem;
}

.column-actions {
  width: 40px;
  text-align: center;
}

.more-button {
  background: none;
  border: none;
  cursor: pointer;
  color: #77d2d2;
  padding: 4px 6px;
  border-radius: 6px;
  display: inline-flex;
  align-items: center;
  transition: all 0.15s;
}

